# pokemon-colorscripts-rs

./: Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  pokemon-rs.1  uninstall.sh
.github/workflows/: release.yml
fastfetch/: config-pokemon.jsonc
src/: main.rs
