[package]
name = "pokemon-rs"
version = "1.0.0"
edition = "2026"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rust-embed = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3           # Maximum optimizations
lto = true              # Link-Time Optimization (optimizes across all dependencies)
codegen-units = 1       # Allows for better optimization at the cost of compile time
panic = "abort"         # Removes stack unwinding code (shrinks binary, faster exits)
strip = true            # Automatically removes debug symbols and symbols table
